--- a/app/assets/stylesheets/components/_event_show_card_1.scss
+++ b/app/assets/stylesheets/components/_event_show_card_1.scss
@@ -13,5 +13,7 @@
 
   .adventure-image {
     padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
   }
 }
